# beboppy

./: .gitignore  README.md  pyproject.toml
beboppy/: decode.py  encode.py  generate.py  parse.py
tests/: test_beboppy.py
tests/schemas/: combined.bop  enum.bop  message.bop  struct.bop
