[tool.poetry]
name = "beboppy"
version = "0.1.0"
description = "An implementation of https://github.com/RainwayApp/bebop in python (WIP)"
authors = ["Jemma Nelson <jemma.s.nelson@gmail.org>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
