[tool.poetry]
name = "beboppy"
version = "0.1.0"
description = "An implementation of https://github.com/RainwayApp/bebop in python (WIP)"
authors = ["Jemma Nelson <jemma.s.nelson@gmail.org>"]

[tool.poetry.dependencies]
python = "^3.9"
# parsimonious ?

lark = "^0.11.1"
[tool.poetry.dev-dependencies]
pytest = "^5.2"
hypothesis = {version = "^5.49.0", extras = ["cli", "lark"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
